# aocutil

./: Cargo.toml
src/: geometry.rs  graph.rs  grid.rs  lib.rs  log.rs  metric.rs  parse.rs  range.rs  range_set.rs  vector.rs
src/geometry/: direction.rs  metric.rs  rotation.rs  vector.rs
src/geometry/direction/: bishop.rs  queen.rs  rook.rs
src/range/: multi.rs
tests/: graph.rs
