[package]
name = "aocutil"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10"
num = "0.4.0"
tracing = "0.1.37"
indexmap = "1.9"

[dependencies.tracing-subscriber]
version = "0.3.16"
features = ["env-filter"]
