[package]
name = "aocutil"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12"
num = "0.4.0"
tracing = "0.1"
indexmap = "2"

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]
